--- a/client/css/style.css
+++ b/client/css/style.css
@@ -8,6 +8,27 @@ body {
     margin: 0;
     background-color: lightgray;
 }
+
+h1,
+h3 {
+  color: #333;
+  margin: 2rem;
+}
+
+.top-h {
+  position: absolute; 
+  top: 20px; 
+  left: 20px; 
+  margin: 0; 
+}
+
+.bottom-h {
+  position: absolute; 
+  top: 50px; 
+  left: 20px; 
+  margin: 0; 
+}
+
 .container {
     display: flex;
     flex-direction: column  ;
@@ -106,4 +127,8 @@ body {
   
   a:hover {
     text-decoration: underline;
+  }
+
+  .error{
+    color: rgb(223, 67, 67);
   }
