--- a/client/css/main.css
+++ b/client/css/main.css
@@ -47,11 +47,21 @@ button {
     border: none;
     cursor: pointer;
     transition: background-color 0.3s;
+    position: relative;
 }
 
 button:hover {
     background-color: #bbb;
 }
+#main::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background-color: #122c9e; 
+  }
 
 .dropdown-content {
     display: none;
@@ -258,6 +268,13 @@ input[type="date"].date-input--has-value::-webkit-datetime-edit-year-field {
     background-color: #fff; 
 }
 
+#createUser{
+    background-color: #111B47;
+    color:white;
+}
+#createUser:hover{
+    background-color:  #122c9e;
+}
 .search-result:hover {
     background-color: #bbb;
 }
