--- a/client/css/main.css
+++ b/client/css/main.css
@@ -53,15 +53,16 @@ button {
 button:hover {
     background-color: #bbb;
 }
+
 #main::after {
-    content: '';    
+    content: '';
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     height: 3px;
-    background-color: #122c9e; 
-  }
+    background-color: #122c9e;
+}
 
 .dropdown-content {
     display: none;
@@ -177,10 +178,11 @@ button:hover {
 }
 
 /*Pop up Nou usuari*/
-.newUserPopUp{
+.newUserPopUp {
     width: 30%;
     min-width: 10rem;
 }
+
 .crearNewUser {
     display: flex;
     flex-direction: column;
@@ -214,12 +216,15 @@ button:hover {
     justify-content: center;
     align-items: center;
 }
-.input-newUser label{
+
+.input-newUser label {
     width: 40%;
 }
-.input-newUser input{
+
+.input-newUser input {
     width: 70%;
 }
+
 .input-newUser input,
 .input-newUser label {
     margin-right: 10px;
@@ -242,19 +247,22 @@ input[type="date"].date-input--has-value::-webkit-datetime-edit-day-field,
 input[type="date"].date-input--has-value::-webkit-datetime-edit-year-field {
     color: #333;
 }
-.error{
+
+.error {
     color: rgb(223, 67, 67);
-  }
+}
+
 /*Buscador de pacients*/
-.searchU{
+.searchU {
     width: 40%;
 }
+
 .search-results {
-    max-height: 200px; 
-    overflow-y: auto; 
-    border: 1px solid #ccc; 
-    border-top: none; 
-    border-radius: 0 0 5px 5px; 
+    max-height: 200px;
+    overflow-y: auto;
+    border: 1px solid #ccc;
+    border-top: none;
+    border-radius: 0 0 5px 5px;
     position: absolute;
     width: 28%;
 }
@@ -264,28 +272,30 @@ input[type="date"].date-input--has-value::-webkit-datetime-edit-year-field {
     cursor: pointer;
     overflow-y: auto;
     border-top: none;
-    background-color: #fff; 
+    background-color: #fff;
 }
 
-#createUser{
+#createUser {
     background-color: #111B47;
-    color:white;
+    color: white;
 }
-#createUser:hover{
-    background-color:  #122c9e;
+
+#createUser:hover {
+    background-color: #122c9e;
 }
+
 .search-result:hover {
     background-color: #bbb;
 }
 
 /*BATCH UPLOAD*/
-.batchUpload{
+.batchUpload {
     display: flex;
     margin-top: 15px;
     gap: 20px;
 }
 
-.selected{
+.selected {
     border: 2px solid rgba(0, 255, 0, 0.5);
 }
 
@@ -301,44 +311,130 @@ input[type="date"].date-input--has-value::-webkit-datetime-edit-year-field {
     cursor: pointer;
     width: 22rem;
     height: 11rem;
-  }
-  .file-upload:hover {
-    border-color: #6752a6;
-  }
-  
-  .file-upload:hover span {
-    color: #6752a6;
-  } 
+}
 
-  #video{
+.file-upload:hover {
+    border-color: #6752a6;
+}
+
+.file-upload:hover span {
+    color: #6752a6;
+}
+
+#video {
     margin: 15px;
     /*transform: scaleX(-1);*/
-  }
+}
 
-  .videoButtons > button{
-    color:white;
-  }
-  
-  .startButton{
-    background-color:#61A146;
-  }
-  .startButton:hover{
-    background-color:#39602b;
-  }
-  .stopButton{
-    background-color:#d7d014;
-  }
-  .stopButton:hover{
-    background-color:#C39F0B;
-  }
-  .finishButton{
-    background-color:#ED2315;
-  }
-  .finishButton:hover{
-    background-color:#C8190D;
-  }
-  .videoButtons > button[disabled] {
-  cursor: not-allowed;
-  background-color: #6D6D6D; /* Color de fondo gris */
-  
-  }
+.videoButtons>button {
+    color: white;
+}
+
+.startButton {
+    background-color: #61A146;
+}
+
+.startButton:hover {
+    background-color: #39602b;
+}
+
+.stopButton {
+    background-color: #d7d014;
+}
+
+.stopButton:hover {
+    background-color: #C39F0B;
+}
+
+.finishButton {
+    background-color: #ED2315;
+}
+
+.finishButton:hover {
+    background-color: #C8190D;
+}
+
+.videoButtons>button[disabled] {
+    cursor: not-allowed;
+    background-color: #6D6D6D;
+    /* Color de fondo gris */
+
+}
+
+/*Chech Questionari*/
+
+.custom-checkbox {
+    display: inline-flex;
+    align-items: center;
+    cursor: pointer;
+    user-select: none;
+    font-size: medium;
+}
+
+.custom-checkbox input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.custom-checkbox .checkmark {
+    position: relative;
+    height: 25px;
+    width: 25px;
+    background-color: #ccc;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+    margin-right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.custom-checkbox .checkmark::after {
+    content: "";
+    position: absolute;
+    display: none;
+    left: 8px;
+    top: 4px;
+    width: 6px;
+    height: 12px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    transform: rotate(45deg);
+}
+
+.custom-checkbox input:checked ~ .checkmark {
+    background-color: #28a745;
+    box-shadow: 0 0 10px rgba(40, 167, 69, 0.6);
+}
+
+.custom-checkbox input:checked ~ .checkmark::after {
+    display: block;
+}
+
+.custom-checkbox input:checked ~ .checkmark {
+    animation: pulse 0.3s ease-in-out;
+}
+
+.custom-checkbox .label-text {
+    transition: color 0.3s ease;
+}
+
+.custom-checkbox input:checked ~ .label-text {
+    color: #28a745;
+}
+
+
+@keyframes pulse {
+    0% {
+        transform: scale(0.9);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
