Dashboard Video funcional

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -361,7 +361,7 @@ input[type="date"].date-input--has-value::-webkit-datetime-edit-year-field {
 
 }
 
-/*Chech Questionari*/
+/*Check Questionari*/
 
 .custom-checkbox {
     display: inline-flex;
