--- a/client/css/videoDashboard.css
+++ b/client/css/videoDashboard.css
@@ -80,14 +80,16 @@ button {
 }
 
 .info1 {
-    grid-column: span 1;
+    grid-column: span 4;
 }
 
 .info2 {
     grid-column: span 1;
 }
 
-.chart1,
+.chart1{
+    grid-column: span 3;
+}
 .chart2 {
     grid-column: span 2;
 }
@@ -121,6 +123,20 @@ button {
     text-align: left;
 }
 
+div > h2{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+#video {
+    max-width: 90%;
+    width: 80%;
+    height: 100%;
+    display: grid;
+    place-items: center; 
+    margin: auto;
+}
+
 /*Frases*/
 .text-content, .chart-container {
     flex:1;
@@ -132,7 +148,17 @@ button {
     align-items: center; 
 }
 
-#chart-doughnut0{
-    margin-left: -50px;
-}
 
+@media (max-width: 1220px) {
+    .info1 {
+        grid-column: span 2;
+    }
+    
+    .info2 {
+        grid-column: span 2;
+    }
+    
+    .chart1 {
+        grid-column: span 4;
+    }
+}
