--- a/client/css/sessionDashboard.css
+++ b/client/css/sessionDashboard.css
@@ -142,3 +142,10 @@ button {
   .videoBtn:hover {
     background-color: #0056b3; 
   }
+
+  .resultatQ{
+    width: 50px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
