--- a/client/css/sessionDashboard.css
+++ b/client/css/sessionDashboard.css
@@ -86,18 +86,26 @@ button {
 .info1 {
     grid-column: span 2;
     padding-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .info2 {
     grid-column: span 2;
     padding-bottom: 20px;
 }
-.info3{
+
+.info3 {
     grid-column: span 1;
 }
-.chart1{
+
+.chart1 {
     grid-column: span 3;
 }
+
 .chart2,
 .chart3 {
     grid-column: span 2;
@@ -108,44 +116,61 @@ button {
 }
 
 /*Videos*/
-.videos > div {
+.videos>div {
     margin-bottom: 10px;
-  }
-  
-  .sessionDiv{
+}
+
+.sessionDiv {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-  }
-  
-  .textDiv{
-    text-align: left;
-  }
-  
-  .sessionDiv > button {
-    height: 50px;
-  }
-  
-  .textDiv p {
-    margin: 0; 
-    font-size: 16px; 
-    color: #333; 
-  }
-  
-  .videoBtn {
-    background-color: #007bff; 
-    color: #fff; 
-    border-radius: 5px; 
-  }
-  
-  .videoBtn:hover {
-    background-color: #0056b3; 
-  }
+}
 
-  .resultatQ{
+.textDiv {
+    text-align: left;
+}
+
+.sessionDiv>button {
+    height: 50px;
+}
+
+.textDiv p {
+    margin: 0;
+    font-size: 16px;
+    color: #333;
+}
+
+.videoBtn {
+    background-color: #007bff;
+    color: #fff;
+    border-radius: 5px;
+}
+
+.videoBtn:hover {
+    background-color: #0056b3;
+}
+
+.resultatQ {
     width: 50px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
-  }
+}
+
+.grid-container .negativeDiv {
+    background-color: #ffe1e1;
+
+}
+
+.grid-container .positiveDiv {
+    background-color: #e2f9df;
+}
+
+.positive {
+    color: green;
+}
+
+.negative {
+    color: red;
+}
